--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,12 +1,18 @@
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     height: 58px;
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
   }
   
   .footer-text {
     color: #888888;
     font-size: 12px;
   }
+  
