--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -40,6 +40,7 @@
   .dropdown {
     position: absolute;
     justify-content: center;
+    background-color: #fff;
     top: 90%;
     right: 35px;
     width: 180px;
@@ -50,7 +51,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* transform: translateY(-10px); */
     transition: transform 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
