--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -82,7 +82,7 @@
     transform: translateX(50%);
     border-width: 10px;
     border-style: solid;
-    border-color: transparent transparent #eeeeee transparent;
+    border-color: transparent transparent #707070 transparent;
   }
 
   .icon{
